# enigmar

./: .gitignore  Cargo.toml  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs
