[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "enigmar"
description = "High-performance Enigma Machine simulator (M3/M4) with Python bindings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
keywords = ["enigma", "cipher", "cryptography", "simulator", "rust"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/MinLee0210/enigmar"
Repository = "https://github.com/MinLee0210/enigmar"
Issues = "https://github.com/MinLee0210/enigmar/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "enigmar"
